Minor Bug Fixing, Formatting * Fix chat visibility (#18) * Fix news visibility (#19) * Change listview li CSS allowing word-wrap (#16) * Fix front page image disappearing (#20) * Add iFrame CSS for chat widget (#14)

--- a/stylesheets/twitter.css
+++ b/stylesheets/twitter.css
@@ -81,5 +81,18 @@ background-color:#081017;
 
 /*** patch for jquerymobile page flicker ***/
 .ui-page {
--webkit-backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
+}
+
+/*** patch for jquerymobile nowrap on list items ***/
+.ui-li-desc, .ui-li-heading{
+	white-space: normal;
+}
+
+.ui-li .ui-btn-text a.ui-link-inherit {
+	white-space: normal;
+}
+.ui-li-thumb {
+	margin-left: 20px;
+	margin-top:  20px;
 }
